environments/development/name-generator/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ng-development
  labels:
    environment: development
    team: engineering
  annotations:
    contact: "dvb@octopus.com"
