environments/development/name-generator/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: name-generator
  namespace: ng-development
  labels:
    app: name-generator
spec:
  replicas: 2
  selector:
    matchLabels:
      app: name-generator
  template:
    metadata:
      labels:
        app: name-generator
    spec:
      containers:
      - name: name-generator
        image: 336151728602.dkr.ecr.us-east-1.amazonaws.com/dvb-pov-sandbox-1-name-generator:0.0.4
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
          protocol: TCP
        resources:
          requests:
            memory: "64Mi"
            cpu: "100m"
          limits:
            memory: "128Mi"
            cpu: "200m"
        livenessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 10
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: name-generator
  namespace: ng-development
  labels:
    app: name-generator
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: name-generator
